[tool.poetry]
name = "pso-algorithm"
version = "0.1.0"
description = ""
authors = ["Ninniet5670 <marconeto3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
